update notification
