# modules/common/notification-rest/notification-rest-impl/rest-openapi.yaml
@@ -1,8 +1,190 @@
+components:
+    schemas:
+        Notification:
+            description: Notification Model
+            properties:
+                id:
+                    format: int64
+                    type: integer
+                    readOnly: true
+                externalReferenceCode:
+                    type: string
+                    readOnly: true
+                status:
+                    type: string
+                    enum: [noRead, read ]
+                category:
+                    type: string
+                    readOnly: true
+                name:
+                    type: string
+                    readOnly: true
+                description:
+                    type: string
+                    readOnly: true
+                createDate:
+                    format: date
+                    type: string
+                    readOnly: true
+                receiverId:
+                    format: int64
+                    type: integer
+                    readOnly: true
+                receiverName:
+                    type: string
+                    readOnly: true
+                subjectId:
+                    format: int64
+                    type: integer
+                subjectName:
+                    type: string
+
+        NotificationNew:
+            description: NotificationNew Model
+            properties:
+                count:
+                    type: integer
+                totalTime:
+                    type: string
+
 info:
-    description: "NotificationRest REST API"
+    description: "Notification REST API"
     license:
         name: "Apache 2.0"
         url: "http://www.apache.org/licenses/LICENSE-2.0.html"
     title: "NotificationRest"
-    version: v1.0
+    version: v2.0
 openapi: 3.0.1
+
+paths:
+
+    "/notification-count":
+        get:
+            tags: ["Notification"]
+            operationId: getCountNotification
+            parameters:
+                - in: query
+                  name: category
+                  schema:
+                      type: string
+                - in: query
+                  name: status
+                  schema:
+                      type: string
+            responses:
+                200:
+                    description: The data returned
+                    content:
+                        application/json:
+                            schema:
+                                type: integer
+                        application/xml:
+                            schema:
+                                type: integer
+    "/notification/new":
+        get:
+            tags: ["NotificationNew"]
+            operationId: getNotificationNew
+            responses:
+                200:
+                    description: The data returned
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/NotificationNew"
+                        application/xml:
+                            schema:
+                                $ref: "#/components/schemas/NotificationNew"
+    "/notification":
+        get:
+            tags: ["Notification"]
+            operationId: getNotification
+            parameters:
+                - in: query
+                  name: category
+                  schema:
+                      type: string
+                - in: query
+                  name: status
+                  schema:
+                      type: string
+                - in: query
+                  name: page
+                  schema:
+                      type: integer
+                - in: query
+                  name: pageSize
+                  schema:
+                      type: integer
+
+            responses:
+                200:
+                    description: The data returned
+                    content:
+                        application/json:
+                            schema:
+                                items:
+                                    $ref: "#/components/schemas/Notification"
+                                type: array
+                        application/xml:
+                            schema:
+                                items:
+                                    $ref: "#/components/schemas/Notification"
+                                type: array
+    "/notification/approval-all-by-receiver/{receiverId}":
+        put:
+            tags: ["Notification"]
+            description: Update all Notification by receiverId and
+            operationId: approvalAllStatusByReceiver
+            parameters:
+                - in: path
+                  name: receiverId
+                  required: true
+                  schema:
+                      format: int64
+                      type: integer
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: "#/components/schemas/Notification"
+                    application/xml:
+                        schema:
+                            $ref: "#/components/schemas/Notification"
+            responses:
+                204:
+                    description: Status updated
+                    content:
+                        application/json: {}
+                        application/xml: {}
+    "/notification/{id}":
+        put:
+            tags: ["Notification"]
+            description: Update a Notification
+            operationId: approvalStatus
+            parameters:
+                - in: path
+                  name: id
+                  required: true
+                  schema:
+                      format: int64
+                      type: integer
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: "#/components/schemas/Notification"
+                    application/xml:
+                        schema:
+                            $ref: "#/components/schemas/Notification"
+            responses:
+                200:
+                    description:
+                        "Notification was updated"
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/Notification"
+                        application/xml:
+                            schema:
+                                $ref: "#/components/schemas/Notification"
